--- a/teamonitor/package.json
+++ b/teamonitor/package.json
@@ -15,6 +15,9 @@
     "serve-favicon": "~2.2.0"
   },
   "devDependencies": {
-    "mongoose": "^4.0.2"
+    "mongoose": "^4.0.2",
+    "grunt": "~0.4.0",
+    "grunt-contrib-compass": "^1.0.3",
+    "grunt-contrib-watch": "^0.6.1"
   }
 }
