--- a/teamonitor/bower.json
+++ b/teamonitor/bower.json
@@ -14,7 +14,9 @@
     "test",
     "tests"
   ],
-  "devDependencies": {
+  "dependencies": {
+    "Chart.js": "~1.0.2",
+    "angular-route": "~1.4.0",
     "angular": "~1.3.15"
   }
 }
